# contra-rl-dqn

./: .env.example  .gitignore  README.md  pyproject.toml  start-fresh.sh  start.sh
config/: settings.py
contra/env/: contra_env.py  wrappers.py
contra/stats/: tracker.py
contra/training/: callbacks.py  dqn.py
contra/web/: server.py
contra/web/static/: app.js  index.html  style.css
docs/: enemy_types.md  narration_script.txt  plan_btr_upgrades.md  plan_dueling_dqn.md  plan_empirical_floor_map.md  plan_extra_lives_exploration.md  plan_human_in_the_loop.md  plan_hybrid_observation.md  plan_lives_scroll_multiplier.md  plan_mixture_of_experts.md  plan_per_life_episodes.md  plan_prioritised_replay.md
roms/: cynes.pal
scripts/: fceux_agent.lua  gen_level_states.py  ram_monitor.py  run.py  watch.py  watch.sh
